@@ -49,72 +49,6 @@ sub parse_mode {
     }
 }
 
-sub is_registered {
-    my ($type, $target) = @_;
-    if ( $type == 1 and defined $Chakora::DB_nick{ lc($target) }{account} ) {
-        return 1;
-    }
-    elsif ( $type == 2 and defined $Chakora::DB_chan{ lc($target) }{name}) {
-	return 1;
-    }
-    else {
-        return 0;
-    }
-}
-
-sub account_name {
-	my ($nick) = @_;
-	return $Chakora::DB_nick{lc($nick)}{account};
-}
-
-sub is_identified {
-    my ($user) = @_;
-    if (defined($Chakora::uid{$user}{'account'})) {
-        return 1;
-    }
-    else {
-        return 0;
-    }
-}
-
-sub in_group {
-	my ($nick, $account) = @_;
-	my $return = 0;
-	foreach my $key ( keys %Chakora::DB_nick ) {
-        	if (lc($key) eq lc($nick) and lc($Chakora::DB_nick{$key}{account}) eq lc($account)) {
-			$return = 1;
-		}
-	}
-	return $return;
-}
-
-sub has_flag {
-	my ($account, $chan, $flag) = @_;
-	my $return = 0;
-	foreach my $key (keys %Chakora::DB_chanflags) {
-                if (lc($Chakora::DB_chanflags{$key}{chan}) eq lc($chan) and lc($Chakora::DB_chanflags{$key}{account}) eq lc($account)) {
-			my @flags = split(//, $Chakora::DB_chanflags{$key}{flags});
-			foreach my $flags (@flags) {
-				if ($flags eq $flag) {
-                        		$return = 1;
-				}
-			}
-                }
-        }
-	return $return;
-}
-
-sub has_flags {
-	my ($account, $chan) = @_;
-	my $return = 0;
-	foreach my $key (keys %Chakora::DB_chanflags) {
-		if (lc($Chakora::DB_chanflags{$key}{chan}) eq lc($chan) and lc($Chakora::DB_chanflags{$key}{account}) eq lc($account) and $Chakora::DB_chanflags{$key}{flags}) {
-			$return = 1;
-		}
-	}
-	return $return;
-}
-
 sub ison {
 	my ($user, $chan) = @_;
 	my $return = 0;
